src/test/ui/nll/issue-52742.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/issue-52742.rs:14:18
   |
LL |         self.y = b.z
   |                  ^^^
   |
note: ...the reference is valid for the lifetime `'_` as defined here...
  --> $DIR/issue-52742.rs:12:10
   |
LL | impl Foo<'_, '_> {
   |          ^^
note: ...but the borrowed content is only valid for the anonymous lifetime defined here
  --> $DIR/issue-52742.rs:13:31
   |
LL |     fn take_bar(&mut self, b: Bar<'_>) {
   |                               ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0312`.
